# valheim-dedicated-server-deployment

./: .envrc.example  .gitignore  .mise.toml  .terraform.lock.hcl  .tool-versions  Dockerfile  Dockerfile.backup  Dockerfile.steamcmd  backup.sh  discord-bot.env.example  docker-compose.yml  index.html  inventory.tpl  job-runner.env.example  main.tf  playbook.yaml  pyproject.toml  renovate.json  start.sh  teardown.sh
.github/workflows/: build-image.yml
ansible/: playbook.yaml
ansible/roles/bottom/tasks/: main.yaml
ansible/roles/harden_ssh/tasks/: main.yaml
ansible/roles/telegraf/tasks/: main.yaml
ansible/roles/valheim_server/tasks/: main.yaml
ansible/templates/: notify-discord-server-starting.sh.j2  valheim.service.j2
chart/: Chart.yaml  values.yaml
chart/templates/: configmap.yaml  deployment.yaml
discord_bot/: bot.py  db.py  factorio_server.py  games.py  jobs.py  sentry.py  server_launch_watcher.py  valheim_server.py  zomboid_server.py
discord_bot/gpt/: api.py  personas.py
docker/: entrypoint.sh  install-or-update-game.sh  install-steamcmd.sh  notify-discord-server-starting.sh  update-steamcmd.sh
docker/backup/: backup.sh  restore-backup.sh
docker/valheim/: start.sh
docker/zomboid/: start.sh  stop.sh
roles/steamcmd/tasks/: main.yaml
roles/telegraf/tasks/: main.yaml
roles/valheim_server/tasks/: main.yaml
roles/zram/tasks/: main.yaml
scripts/: _base.sh  backup.sh  start.sh  teardown.sh
templates/: start-valheim-server.sh.j2  telegraf.conf.j2  valheim.service.j2
terraform/: .terraform.lock.hcl  main.tf  terraform-entrypoint.sh
terraform/factorio/: .terraform.lock.hcl  cloud-init.tftpl  main.tf
terraform/valheim/: .terraform.lock.hcl  cloud-init.tftpl  main.tf
terraform/zomboid/: .terraform.lock.hcl  cloud-init.tftpl  main.tf
