[project]
name = "discord-bot"
version = "0.1.0"
dependencies = [
    "loguru >=0.7.0,<0.8.0",
    "hikari >=2.0.0.dev113,<3.0.0",
    "hikari-lightbulb >=2.3.0,<3.0.0",
    "rq >=1.10.1,<2.0.0",
    "openai >=1.12.0,<2.0.0",
    "sentry-sdk[rq] >=2.8.0,<3.0.0",
    "docker >=7.0.0,<8.0.0",
    "backoff >=2.2.1,<3.0.0",
    "requests >=2.32.0,<3.0.0",
    "cyclopts >=2.7.1,<3.0.0",
]
requires-python = ">=3.11,<3.12"

[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["Sven Grunewaldt <strayer@olle-orks.org>"]
license = "MIT"

[tool.uv]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
